--- a/index.html
+++ b/index.html
@@ -1,177 +1,61 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style.css"
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <style>
       body{
-  background-color: #0804;
+  margin:0;
+  padding:0;
 }
-.photu{
-  width:120px;
-  height:120px;
-  border:3px solid green;
-  border-radius:70px;
-  margin-top:20px;
-  margin-left:110px;
+.op{
+  width: 100%;
+  height:200px;
+  background-color: gray;
 }
-#op{
+.opp{
+  height: 90px;
+  width: 90px;
+  margin-left: 135px;
+  border: 3px solid white;
+  border-radius: 30px;
+   margin-top: 25px;
+}
+.kya{
   text-align: center;
 }
-.web{
-    text-align: center;
+.kyaa{
+  text-align: center;
+  margin-top:7px;
+  
 }
-.div1{
+.rani{
+  margin: 20px;
+}
+.oppp{
   background-color: black;
-  height:2px;
-  width:100%;
+  width: 300px;
+  height: 2px;
+  margin:24px;
 }
-#h5{
-  margin-left: 20px;
-}
-.fa-phone{
-  margin-left:10px;
-}
-.fa-envelope{
-   margin-left: 10px;
-   margin-top:20px;
-}
-.fa-location-dot{
-  margin-left: 10px;
-   margin-top:20px;
-}
-.mai{
- margin-left: 10px;  
-}
-}
-.container{
-    position: relative;
-    max-width: 500px;
-    width: 100%;
-    background: #fff;
-    margin: 0 15px;
-    padding: 10px 20px;
-    border-radius: 7px;
-}
-.container .skill-box{
-    width: 100%;
-    margin: 25px 0;
-}
-.skill-box .title{
-    display: block;
-    font-size: 14px;
-    font-weight: 600;
-    color: #333;
-}
-.skill-box .skill-bar{
-    height: 8px;
-    width: 100%;
-    border-radius: 6px;
-    margin-top: 6px;
-    background: rgba(0,0,0,0.1);
-}
-.skill-bar .skill-per{
-    position: relative;
-    display: block;
-    height: 100%;
-    width: 90%;
-    border-radius: 6px;
-    background: #4070f4;
-    animation: progress 0.4s ease-in-out forwards;
-    opacity: 0;
-}
-.skill-per.css{
-    width: 70%;
-    animation-delay: 0.1s;
-}
-.skill-per.javascript{
-    width: 50%;
-    animation-delay: 0.2s;
-}
-.skill-per.nodejs{
-    width: 30%;
-    animation-delay: 0.3s;
-}
-@keyframes progress {
-    0%{
-        width: 0;
-        opacity: 1;
-    }
-    100%{
-        opacity: 1;
-    }
-}
-.skill-per .tooltip{
-    position: absolute;
-    right: -14px;
-    top: -28px;
-    font-size: 9px;
-    font-weight: 500;
-    color: #fff;
-    padding: 2px 6px;
-    border-radius: 3px;
-    background: #4070f4;
-    z-index: 1;
-}
-.tooltip::before{
-    content: '';
-    position: absolute;
-    left: 50%;
-    bottom: -2px;
-    height: 10px;
-    width: 10px;
-    z-index: -1;
-    background-color: #4070f4;
-    transform: translateX(-50%) rotate(45deg);
-}
-
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <body>
-      <img class="photu"  src="meri.jpg">
-      <h2 id="op">DHANANJAY MALVIYA</h2>
-      <P class="web"><small>WEB DEVLOPER</small></P>
-      <div class="div1">
+  </head>
+  <body>
+    <div class="op">
+    <img class="opp" 
+    src="my.jpg">
+    <h3 class="kya"><b><i>DHANANJAY MALVIYA<br>
+    [WEB DEVLOPER]</b></i></h3>
+    </div>
+    <div>
+      <h2 class="kyaa">☆Contact Us☆</h2>
+      <p class="rani"><big>
+        <b>Mobile number</b>-6265567766<br>
+    <b>Email</b>-kyabatau11@gmail.com
+    <b>Instagram</b>-123@devloper
+      </big></p>
+      <div class="oppp"
         
       </div>
-      <h5 id="h5"><u>CONTACT INFO</u></h5>
-      <i class="fa-solid fa-phone">:-6265567766 </i>
-      <i class="fa-solid fa-envelope">:-dhananjay27<br>@gmail.com</i>
-      <i class="fa-solid fa-location-dot">:-BETUL, M.P.</i>
-       <h5 id="h5"><u>EDUCATION</u></h5>
-       <p class="mai"><b>Get education from divine english school since class8<sup>th</sup> and in class 9<sup>th</sup> I am in C.M. rise school</b> </p>
-       <h5 id="h5"><u>LANGUAGES I LEARN</u></h5>
-      <div class="container">
-        <div class="skill-box">
-            <span class="title">HTML</span>
-            <div class="skill-bar">
-                <span class="skill-per html">
-                    <span class="tooltip">90%</span>
-                </span>
-            </div>
-        </div>
-        <div class="skill-box">
-            <span class="title">CSS</span>
-            <div class="skill-bar">
-                <span class="skill-per css">
-                    <span class="tooltip">70%</span>
-                </span>
-            </div>
-        </div>
-        <div class="skill-box">
-            <span class="title">JavaScript</span>
-            <div class="skill-bar">
-                <span class="skill-per javascript">
-                    <span class="tooltip">50%</span>
-                </span>
-            </div>
-        </div>
-        <div class="skill-box">
-            <span class="title">NodeJS</span>
-            <div class="skill-bar">
-                <span class="skill-per nodejs">
-                    <span class="tooltip">30%</span>
-                </span>
-            </div>
-        </div>
-    </div>
-    
-</body>
+          </div>
+  </body>
 </html>
